--- a/dashboard.html
+++ b/dashboard.html
@@ -10,12 +10,93 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.min.css" integrity="sha256-HEtF7HLJZSC3Le1HcsWbz1hDYFPZCqDhZa9QsCgVUdw=" crossorigin="anonymous" />
   <link rel="stylesheet" type="text/css" href="./css/dashstyles.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 
 <body>
 
+  <script>
+  function statusChangeCallback(response) {
+console.log('statusChangeCallback');
+console.log(response);
 
 
+}
+
+function checkLoginState() {
+FB.getLoginStatus(function(response) {
+  statusChangeCallback(response);
+});
+}
+
+window.fbAsyncInit = function() {
+FB.init({
+  appId: '431681420562979',
+  cookie: true,
+  xfbml: true,
+  version: 'v2.8'
+});
+
+FB.getLoginStatus(function(response) {
+  statusChangeCallback(response);
+});
+};
+
+(function(d, s, id) {
+var js,
+  fjs = d.getElementsByTagName(s)[0];
+if (d.getElementById(id)) return;
+js = d.createElement(s);
+js.id = id;
+js.src = '//connect.facebook.net/en_US/sdk.js';
+fjs.parentNode.insertBefore(js, fjs);
+})(document, 'script', 'facebook-jssdk');
+
+function testAPI() {
+console.log('Welcome!  Fetching your information.... ');
+FB.api('/me', function(response) {
+});
+}
+</script>
+  <section class="hero is-fullheight is-default is-bold">
+    <div class="hero-head">
+      <nav class="navbar">
+        <div class="container">
+          <div class="navbar-brand">
+
+          <!-- <img class="logo" src="logos.png" alt="Logo"> -->
+
+            <span class="navbar-burger burger" data-target="navbarMenu">
+              <span></span>
+              <span></span>
+              <span></span>
+            </span>
+          </div>
+          <div id="navbarMenu" class="navbar-menu">
+            <div class="navbar-end">
+              <a href="index.html" class="navs navbar-item is-active has-text-white">
+                Home
+              </a>
+              <a href="dashboard.html" class=" navs navbar-item has-text-white">
+            Dashboard
+          </a>
+              <a href="about.html" class="navs navbar-item has-text-white">
+            About
+          </a>
+              <div id="fbookButton" class="fb-login-button"
+              data-max-rows="1" data-size="medium"
+              data-button-type="login_with" data-show-faces="false"
+              data-auto-logout-link="true" data-use-continue-as="false"
+              scope="public_profile,email" onlogin="checkLoginState"></div>
+
+              <div id="status">
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>
+<div class="hero-body">
   <div class="container">
     <div class="columns">
       <div class="column is-2">
@@ -107,7 +188,7 @@
     </tr>
     {{/each}}
   </script>
-
+</section>
 </body>
 
 </html>
