--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
             <h2 class="subtitle has-text-white">
     For more information on this project or to build your own please check out the README on our repo.
     </h2>
-            <h2><a target="_blank">
+            <h2><a target="_blank" href="https://github.com/JPMendenhall/The-Daily-Reflection">
     https://github.com/JPMendenhall/The-Daily-Reflection </a></h2>
             <br>
             <p class="title is-3 is-spaced has-text-white">Contributors:</p>
